--- a/res/layout/activity_perfil.xml
+++ b/res/layout/activity_perfil.xml
@@ -1,33 +1,3 @@
-<!--  
-<android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-   
-   
-    <include
-        android:layout_width="wrap_content"
-        layout="@layout/perfil" />
-    
-     
-    <ListView android:id="@+id/left_drawer"
-       		  android:background="@color/blanco_transparente"
-              android:layout_width="200dp"
-              android:layout_height="match_parent"
-              android:layout_gravity="start"
-              android:choiceMode="singleChoice"
-              android:divider="@android:color/transparent"
-              android:dividerHeight="0dp"
-              />
-</android.support.v4.widget.DrawerLayout>
-
--->
-
-
-
-
-
 <android.support.v4.widget.SlidingPaneLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/slidingPane"
@@ -47,7 +17,7 @@
 
     <include
         android:layout_width="wrap_content"
-        layout="@layout/perfil" />
+        layout="@layout/profile_view" />
     
    
     
