--- a/res/layout/activity_registro.xml
+++ b/res/layout/activity_registro.xml
@@ -11,7 +11,7 @@
     tools:context=".RegistroActivity" >
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/registration_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -22,7 +22,7 @@
     </EditText>
     
      <EditText
-         android:id="@+id/editText1"
+         android:id="@+id/registraion_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
@@ -32,7 +32,7 @@
     </EditText>
     
      <EditText
-         android:id="@+id/editText1"
+         android:id="@+id/registration_confirm_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
@@ -42,7 +42,7 @@
     </EditText>
     
      <EditText
-         android:id="@+id/editText1"
+         android:id="@+id/registration_first_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
@@ -52,47 +52,36 @@
     </EditText>
 
     <AutoCompleteTextView
-        android:id="@+id/registro_universidades"
+        android:id="@+id/registration_last_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="apellido paterno"
         android:inputType="textNoSuggestions" />
-    
-    <AutoCompleteTextView
-        android:id="@+id/registro_estados"
-        android:layout_width="match_parent"
+
+    <EditText
+        android:id="@+id/registration_age"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="apellido materno"
-        android:inputType="textNoSuggestions" />
+        android:hint="edad"
+        android:inputType="number" >
+    </EditText>
 
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/registration_image"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:src="@drawable/icon_photo" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
 
-            <EditText
-                android:id="@+id/editText1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="edad"
-                android:inputType="number" >
-            </EditText>
 
-            <Button
-                android:id="@+id/button1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="OK" />
-        </LinearLayout>
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Terminate" />
 
 
 
