--- a/res/layout/cuestionario.xml
+++ b/res/layout/cuestionario.xml
@@ -9,8 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-    
-
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
@@ -21,21 +19,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/imagen_cuestionario"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/uaa" />
-
         <TextView
             android:id="@+id/pregunta_cuestionario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="Cuando se celebro el día de la revolucion en mexico"
             android:textAppearance="?android:attr/textAppearanceMedium"
             
-            android:textColor="@color/pregunta"
+            android:textColor="@color/question_color"
             android:textSize="20dp" />
 
         <RadioGroup
@@ -48,7 +40,7 @@
                 android:layout_width="305dp"
                 android:layout_height="wrap_content"
                 android:text="RadioButton"
-                android:textColor="@color/respuesta"
+                android:textColor="@color/answer_color"
                 android:textSize="20dp" />
 
             <RadioButton
@@ -56,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="RadioButton"
-                android:textColor="@color/respuesta"
+                android:textColor="@color/answer_color"
                 android:textSize="20dp" />
 
             <RadioButton
@@ -64,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="RadioButton"
-                android:textColor="@color/respuesta"
+                android:textColor="@color/answer_color"
                 android:textSize="20dp" />
 
             <RadioButton
@@ -72,28 +64,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="RadioButton"
-                android:textColor="@color/respuesta"
+                android:textColor="@color/answer_color"
                 android:textSize="20dp" />
 
         </RadioGroup>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:layout_weight="1"
-            android:orientation="horizontal" >
 
-            <Button
-                android:id="@+id/botonFinalizar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" Finalizar "
-                android:background="@color/cafe"
-                
-                android:textColor="@color/blanco" />
-            
-        </LinearLayout>
     </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/botonFinalizar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=" Finalizar "
+            android:background="@color/brow_color"
+
+            android:textColor="@color/white_color" />
+
+    </LinearLayout>
 </FrameLayout>
