--- a/res/layout/exam_view.xml
+++ b/res/layout/exam_view.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="top"
-        android:background="@color/cafe"
+        android:background="@color/brow_color"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
         android:textColor="#fff" />
