--- a/res/layout/item_lateral.xml
+++ b/res/layout/item_lateral.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:textColor="@color/rojo"
+        android:textColor="@color/red_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:textColor="@color/azul"
+        android:textColor="@color/blue_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tecnologias de informacion"
