--- a/res/layout/item_tema.xml
+++ b/res/layout/item_tema.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/perfil_pruebas"
+        android:id="@+id/profile_plays"
         android:layout_width="wrap_content"
         android:layout_height="5dp"
         android:background="@drawable/pizarron"
@@ -23,15 +23,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="Large Text"
-            android:textColor="@color/pregunta"
+            android:textColor="@color/question_color"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
             android:id="@+id/boton_tema"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/blanco"
-            android:background="@color/cafe"
+            android:textColor="@color/white_color"
+            android:background="@color/brow_color"
             android:text=" IR " />
         
     </LinearLayout>
@@ -42,11 +42,11 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/perfil_nombre"
+            android:id="@+id/profile_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/cafe"
+            android:textColor="@color/brow_color"
             android:text="Descripcion"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -56,7 +56,7 @@
         android:id="@+id/descripcion_tema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/blanco"
+        android:textColor="@color/white_color"
         android:text="descripcion del tema"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
