--- a/res/layout/login_view.xml
+++ b/res/layout/login_view.xml
@@ -17,7 +17,7 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/registration_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -57,9 +57,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@color/verde_transparente"
+            android:background="@color/black_green_color"
             android:text=" GO "
-            android:textColor="@color/blanco"
+            android:textColor="@color/white_color"
             android:textSize="30dp" />
 
         <TextView
@@ -69,7 +69,7 @@
             android:layout_gravity="left"
             android:text="Registrarse"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/naranja" />
+            android:textColor="@color/orange_color" />
         
     </LinearLayout>
 
