--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,21 +1,64 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+    <style name="Theme.Apprende" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="android:actionBarItemBackground">@drawable/selectable_background_apprende</item>
+        <item name="android:popupMenuStyle">@style/PopupMenu.Apprende</item>
+        <item name="android:dropDownListViewStyle">@style/DropDownListView.Apprende</item>
+        <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Apprende</item>
+        <item name="android:actionDropDownStyle">@style/DropDownNav.Apprende</item>
+        <item name="android:actionBarStyle">@style/ActionBar.Solid.Apprende</item>
+        <item name="android:actionModeBackground">@drawable/cab_background_top_apprende</item>
+        <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_apprende</item>
+        <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Apprende</item>
+        
+                <!-- Light.DarkActionBar specific -->
+        <item name="android:actionBarWidgetTheme">@style/Theme.Apprende.Widget</item>
+
     </style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    	
+    <style name="ActionBar.Solid.Apprende" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@drawable/ab_background_textured_apprende</item>
+        <item name="android:backgroundStacked">@drawable/ab_stacked_solid_apprende</item>
+        <item name="android:backgroundSplit">@drawable/ab_background_textured_apprende</item>
+        <item name="android:progressBarStyle">@style/ProgressBar.Apprende</item>
+    </style>
+
+    <style name="ActionBar.Transparent.Apprende" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:background">@drawable/ab_transparent_apprende</item>
+        <item name="android:progressBarStyle">@style/ProgressBar.Apprende</item>
+    </style>
+
+    <style name="PopupMenu.Apprende" parent="@android:style/Widget.Holo.ListPopupWindow">
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_apprende</item>	
+    </style>
+
+    <style name="DropDownListView.Apprende" parent="@android:style/Widget.Holo.ListView.DropDown">
+        <item name="android:listSelector">@drawable/selectable_background_apprende</item>
+    </style>
+
+    <style name="ActionBarTabStyle.Apprende" parent="@android:style/Widget.Holo.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_apprende</item>
+    </style>
+
+    <style name="DropDownNav.Apprende" parent="@android:style/Widget.Holo.Spinner">
+        <item name="android:background">@drawable/spinner_background_ab_apprende</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_apprende</item>
+        <item name="android:dropDownSelector">@drawable/selectable_background_apprende</item>
+    </style>
+    
+    <style name="ProgressBar.Apprende" parent="@android:style/Widget.Holo.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progress_horizontal_apprende</item>
+    </style>
+    
+    <style name="ActionButton.CloseMode.Apprende" parent="@android:style/Widget.Holo.ActionButton.CloseMode">
+        <item name="android:background">@drawable/btn_cab_done_apprende</item>
+    </style>
+
+    <!-- this style is only referenced in a Light.DarkActionBar based theme -->
+    <style name="Theme.Apprende.Widget" parent="@android:style/Theme.Holo">
+        <item name="android:popupMenuStyle">@style/PopupMenu.Apprende</item>
+        <item name="android:dropDownListViewStyle">@style/DropDownListView.Apprende</item>
     </style>
 
 </resources>
