--- a/res/layout/activity_presentacion.xml
+++ b/res/layout/activity_presentacion.xml
@@ -7,84 +7,41 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PresentationActivity" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <ImageView
-        android:id="@+id/registration_image"
-        android:layout_width="fill_parent"
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/uaa" />
-    
+        android:layout_gravity="right"
+        android:textSize="18sp"
+        android:text="Develop by"
+        android:textColor="#474747" />
+
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:textSize="30dp"
-            android:text=" "
-            android:textAppearance="?android:attr/textAppearanceMedium"
-             />
-    
-    
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:textSize="15sp"
+        android:text="@string/cbedoy"
+        android:textColor="#999999" />
+
     <TextView
-            android:id="@+id/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Creditos:"
-            android:textColor="@color/blue_color"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:textSize="15sp"
+        android:text="@string/dave"
+        android:textColor="#999999" />
 
-        <TextView
-            android:id="@+id/profile_university"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Carlos Alfredo Cervantes Bedoy"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-             />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:textSize="15sp"
+        android:text="@string/tito"
+        android:textColor="#999999" />
 
-        <TextView
-            android:id="@+id/profile_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="David Angel Gutierrez Duron"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-             />
-
-            <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:textSize="30dp"
-            android:text=" "
-            android:textAppearance="?android:attr/textAppearanceMedium"
-             />
     
-        <TextView
-            android:id="@+id/profile_points"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Tutores:"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/blue_color" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="MSC Guillermo Dominguez Aguilar"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Dra  Loecelia Ruvalcaba Sánchez"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
