--- a/res/layout/cuestionario.xml
+++ b/res/layout/cuestionario.xml
@@ -15,79 +15,74 @@
         android:layout_height="match_parent" >
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/pregunta_cuestionario"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:text="Cuando se celebro el día de la revolucion en mexico"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            
-            android:textColor="@color/question_color"
-            android:textSize="20dp" />
+            <TextView
+                android:id="@+id/pregunta_cuestionario"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_weight="1"
+                android:text="Cuando se celebro el día de la revolucion en mexico"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
 
-        <RadioGroup
-            android:id="@+id/radioGroup1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            <RadioGroup
+                android:id="@+id/radioGroup1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
 
-            <RadioButton
-                android:id="@+id/opcion1_cuestionario"
-                android:layout_width="305dp"
-                android:layout_height="wrap_content"
-                android:text="RadioButton"
-                android:textColor="@color/answer_color"
-                android:textSize="20dp" />
+                <RadioButton
+                    android:id="@+id/opcion1_cuestionario"
+                    android:layout_width="305dp"
+                    android:layout_height="wrap_content"
+                    android:text="RadioButton"
+                    android:textColor="#dddddd"
+                    android:textSize="20dp" />
 
-            <RadioButton
-                android:id="@+id/opcion2_cuestionario"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="RadioButton"
-                android:textColor="@color/answer_color"
-                android:textSize="20dp" />
+                <RadioButton
+                    android:id="@+id/opcion2_cuestionario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="RadioButton"
+                    android:textColor="#dddddd"
+                    android:textSize="20dp" />
 
-            <RadioButton
-                android:id="@+id/opcion3_cuestionario"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="RadioButton"
-                android:textColor="@color/answer_color"
-                android:textSize="20dp" />
+                <RadioButton
+                    android:id="@+id/opcion3_cuestionario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="RadioButton"
+                    android:textColor="#dddddd"
+                    android:textSize="20dp" />
 
-            <RadioButton
-                android:id="@+id/opcion4_cuestionario"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="RadioButton"
-                android:textColor="@color/answer_color"
-                android:textSize="20dp" />
-
-        </RadioGroup>
-
-
-    </LinearLayout>
+                <RadioButton
+                    android:id="@+id/opcion4_cuestionario"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="RadioButton"
+                    android:textColor="#dddddd"
+                    android:textSize="20dp" />
+            </RadioGroup>
+        </LinearLayout>
     </ScrollView>
+
     <LinearLayout
-        android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:layout_gravity="bottom"
         android:layout_weight="1"
+        android:gravity="right"
         android:orientation="horizontal" >
 
         <Button
             android:id="@+id/botonFinalizar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            
             android:text=" Finalizar "
-            android:background="@color/brow_color"
-
-            android:textColor="@color/white_color" />
-
+            android:textColor="#ffffff" />
     </LinearLayout>
+
 </FrameLayout>
