--- a/res/layout/item_materia.xml
+++ b/res/layout/item_materia.xml
@@ -2,24 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical" >
-
+    android:layout_marginLeft="11dp"
+    android:layout_marginRight="11dp"
+    android:layout_marginLeft="11dp"
+    android:layout_marginLeft="11dp"
+    android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/bMateria"
-        android:layout_width="match_parent"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:background="@color/brow_color"
-        android:text="Matematicas"
-        android:textColor="#ffffff"
-        android:textSize="30dp" />
+        android:background="#"
+        android:text="Chemistry"
+        android:textSize="22sp"
+        android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
-
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="4 temas"
+        android:textSize="18sp"
+        android:layout_weight="1"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
