--- a/res/layout/item_tema.xml
+++ b/res/layout/item_tema.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,52 +11,27 @@
         android:background="@drawable/pizarron"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/nombre_tema"
         android:layout_width="match_parent"
+        android:gravity="center"
+        android:textColor="@color/blue_color"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:text="Matematicas"
+		android:textSize="20sp"
+		android:layout_marginLeft="11dp"
+		android:layout_marginRight="11dp"
+        android:textColor="@color/question_color" />
 
-        <TextView
-            android:id="@+id/nombre_tema"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Large Text"
-            android:textColor="@color/question_color"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <Button
-            android:id="@+id/boton_tema"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white_color"
-            android:background="@color/brow_color"
-            android:text=" IR " />
-        
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/profile_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="@color/brow_color"
-            android:text="Descripcion"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    </LinearLayout>
 
     <TextView
         android:id="@+id/descripcion_tema"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white_color"
-        android:text="descripcion del tema"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginLeft="11dp"
+		android:layout_marginRight="11dp"
+		android:gravity="right"
+        android:text="Descripcion del tema sobre de que es y que es lo que puede venir"
+        android:textColor="#999999" />
 
 </LinearLayout>
