--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <color name="blue_color">#0174DF</color>
-    <color name="black_color">#222222</color>
-    <color name="white_color">#ffffff</color>
-    <color name="question_color">#F5DA81</color>
-    <color name="answer_color">#F2F2F2</color>
-    <color name="finish_button_color">#99F7D358</color>
-    <color name="yellow_color">#D7DF01</color>
-    <color name="description_color">#01DF74</color>
-    <color name="gray_color">#BDBDBD</color>
-    <color name="red_color">#B40431</color>
-    <color name="green_color">#016326</color>
-    <color name="black_green_color">#9904B404</color>
-    <color name="black_white_color">#99ffffff</color>
-    <color name="turquesa_color">#00BFFF</color>
-    <color name="action_color">#FA5882</color>
-    <color name="brow_color">#cc6d442e</color>
-    <color name="title_color">#045FB4</color>
-    <color name="correct_color">#04B431</color>
-    <color name="error_color">#FF8000</color>
-    <color name="black_black_color">#dd000000</color>
-    <color name="orange_color">#ffc132</color>
-
+	<color name="orange">#FF5E3A</color>
+	<color name="yellow">#FFCD02</color>
+	<color name="green">#0BD318</color>
+	<color name="turquesa">#5AC8FB</color>
+	
+	<color name="blue_hight">#1D62F0</color>
+	<color name="purple">#5856D6</color>
+	
+	<color name="black">##2B2B2B</color>
     <color name="rank1">#99FFCC00</color>
     <color name="rank2">#994CD964</color>
     <color name="rank3">#99007AFF</color>
