--- a/res/layout/item_lateral.xml
+++ b/res/layout/item_lateral.xml
@@ -2,9 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical" >
 
     <TextView
@@ -17,7 +14,7 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:textColor="@color/red_color"
+        android:textColor="#555555"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
@@ -26,7 +23,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:textColor="@color/blue_color"
+        android:textColor="#999999"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tecnologias de informacion"
@@ -34,12 +31,14 @@
 
     <TextView
         android:id="@+id/textView3"
+        android:textColor="#999999"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Numero preguntas: X" />
 
     <TextView
         android:id="@+id/textView4"
+        android:textColor="#999999"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Numero Aciertos"
@@ -47,6 +46,7 @@
 
     <TextView
         android:id="@+id/textView5"
+        android:textColor="#999999"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Numero Errores"
@@ -54,6 +54,7 @@
 
     <TextView
         android:id="@+id/textView6"
+        android:textColor="#999999"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
