--- a/res/layout/exam_view.xml
+++ b/res/layout/exam_view.xml
@@ -1,22 +1,17 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pager"
-    android:background="@drawable/bg_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_app"
     tools:context=".ExamActivity" >
-
-    <!--
-    This title strip will display the currently visible page title, as well as the page
-    titles for adjacent pages.
-    -->
 
     <android.support.v4.view.PagerTitleStrip
         android:id="@+id/pager_title_strip"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="top"
-        android:background="@color/brow_color"
+        android:background="#99000000"
         android:paddingBottom="4dp"
         android:paddingTop="4dp"
         android:textColor="#fff" />
