--- a/res/layout/inflate_estadisticas.xml
+++ b/res/layout/inflate_estadisticas.xml
@@ -30,8 +30,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:background="@color/black_black_color"
+        android:background="#99000000"
         android:text="@string/detail"
-        android:textColor="@color/white_color" />
+        android:textColor="#ffffff" />
 
 </LinearLayout>
