--- a/res/layout/item_materia.xml
+++ b/res/layout/item_materia.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="11dp"
     android:layout_marginRight="11dp"
-    android:layout_marginLeft="11dp"
-    android:layout_marginLeft="11dp"
+    android:background="#99000000"
+    android:layout_marginTop="11dp"
+    android:layout_marginBottom="11dp"
     android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
+        android:paddingLeft="11dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_height="wrap_content"
-        android:background="#"
+        android:textColor="#ffffff"
+        android:background="#2B2B2B"
         android:text="Chemistry"
-        android:textSize="22sp"
-        android:layout_weight="1"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textSize="20sp"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4 temas"
-        android:textSize="18sp"
-        android:layout_weight="1"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textColor="#ffffff"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#34AADC"
+        android:text="4"
+        android:gravity="center"
+        android:textSize="15sp"
+        android:layout_weight="3" />
 
 </LinearLayout>
