--- a/res/layout/login_view.xml
+++ b/res/layout/login_view.xml
@@ -57,9 +57,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:background="@color/black_green_color"
+            android:background="#99000000"
             android:text=" GO "
-            android:textColor="@color/white_color"
+            android:textColor="#ffffff"
             android:textSize="30dp" />
 
         <TextView
@@ -69,7 +69,7 @@
             android:layout_gravity="left"
             android:text="Registrarse"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/orange_color" />
+            android:textColor="#34AADC" />
         
     </LinearLayout>
 
