--- a/res/layout/profile_view.xml
+++ b/res/layout/profile_view.xml
@@ -3,40 +3,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_app"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
         <View
             android:layout_width="fill_parent"
-            android:layout_weight="4"
             android:layout_height="264dp"
-            android:background="@color/rank3"/>
+            android:layout_weight="4"
+            android:background="@color/rank3" />
+
         <ImageView
             android:id="@+id/profile_picture"
-            android:layout_weight="1"
             android:layout_width="fill_parent"
             android:layout_height="264dp"
-            android:gravity="right|center"
             android:layout_gravity="right|center"
+            android:layout_weight="1"
+            android:gravity="right|center"
             android:scaleType="fitXY"
             android:src="@drawable/mock_profile" />
-        </LinearLayout>
+    </LinearLayout>
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="24dp"/>
+        android:layout_height="24dp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:orientation="vertical"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/profile_university"
@@ -44,26 +46,26 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="right|center"
-            android:textColor="@color/white_color"
-            android:text="Universidad Autonom De Aguascaluentes" />
+            android:text="Universidad Autonom De Aguascaluentes"
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/location"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:textColor="@color/white_color"
+            android:gravity="right|center"
             android:text="Aguascalientes"
-            android:gravity="right|center"/>
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/profile_username"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:text="Carlos Bedoy"
             android:gravity="right|center"
-            android:textColor="@color/white_color" />
+            android:text="Carlos Bedoy"
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/profile_age"
@@ -72,7 +74,7 @@
             android:layout_weight="1"
             android:gravity="right|center"
             android:text="25 años"
-            android:textColor="@color/white_color" />
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/profile_position"
@@ -80,8 +82,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="right|center"
-            android:textColor="@color/yellow_color"
-            android:text="1er lugar" />
+            android:text="1er lugar"
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/profile_points"
@@ -89,8 +91,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="right|center"
-            android:textColor="@color/orange_color"
-            android:text="350 puntos" />
+            android:text="350 puntos"
+            android:textColor="#ffffff" />
 
         <TextView
             android:id="@+id/profile_plays"
@@ -98,10 +100,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="right|center"
-            android:textColor="@color/white_color"
-            android:text="5 examenes" />
-
+            android:text="5 examenes"
+            android:textColor="#ffffff" />
     </LinearLayout>
-
 
 </LinearLayout>
