--- a/res/layout/report_view.xml
+++ b/res/layout/report_view.xml
@@ -10,176 +10,174 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StatisticsActivity" >
 
-   
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/estadisticas_fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/date"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#444444"
+            android:textStyle="italic|bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            
-            
-            <TextView
-                android:id="@+id/estadisticas_fecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/date"
-                
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/title_color"
-                android:textStyle="italic|bold" />
-
-           <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" > 
-	            <TextView
-	                android:layout_width="0dip"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_height="wrap_content"
-	                android:text="@string/points"
-	                android:layout_weight="1"
-	                android:textStyle="bold" />
-
-	            <TextView
-	                android:id="@+id/s_points"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/example"
-	                android:layout_gravity="right"
-	                android:textStyle="italic" />
-            </LinearLayout>
-           
-           <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" > 
-	           <TextView
-	                android:layout_width="0dip"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_height="wrap_content"
-	                android:textStyle="bold"
-	                android:layout_weight="1"
-	                android:text="@string/rate" />
-	            
-	            <TextView
-	                android:id="@+id/s_rate"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/example"
-	                android:layout_gravity="right"
-	                android:textStyle="italic" />
-            </LinearLayout>
-
-           <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" > 
-	            <TextView
-	                android:layout_width="0dip"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_height="wrap_content"
-	                android:layout_weight="1"
-	                android:textStyle="bold"
-	                android:text="@string/numberOfQuestions" />
-	            
-	            <TextView
-	                android:id="@+id/s_numberOfQuestions"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/example"
-	                android:layout_gravity="right"
-	                android:textStyle="italic" />
-            </LinearLayout>
-           
-           <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" > 
-           
-	            <TextView
-	                android:layout_width="0dip"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_height="wrap_content"
-	                android:layout_weight="1"
-	                android:textStyle="bold"
-	                android:text="@string/successes" />
-	            
-	            <TextView
-	                android:id="@+id/s_successes"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/example"
-	                android:layout_gravity="right"
-	                android:textStyle="italic" />
-            </LinearLayout>
-
-           <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" > 
-	            <TextView
-	                android:layout_width="0dip"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_height="wrap_content"
-	                android:layout_weight="1"
-	                android:textStyle="bold"
-	                android:text="@string/errors" />
-
-	            <TextView
-	                android:id="@+id/s_erros"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/example"
-	                android:layout_gravity="right"
-	                android:textStyle="italic" />
-            </LinearLayout>
-	       <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >      
-            
-	            <TextView
-	                android:layout_width="0dip"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_height="wrap_content"
-	                android:layout_weight="1"
-	                android:textStyle="bold"
-	                android:text="@string/empty" />
-	            
-	            <TextView
-	                android:id="@+id/s_empty"
-	                android:textSize="@dimen/texto_estadistica"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:text="@string/example"
-	                android:layout_gravity="right"
-	                android:textStyle="italic" />
-            </LinearLayout>
+            android:orientation="horizontal" >
 
             <TextView
-                android:id="@+id/profile_plays"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/points"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/s_points"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/report"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/title_color"
-                android:textStyle="bold|italic" />
-
-            <ListView
-                android:id="@+id/lista_resultados"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-            </ListView>
-
+                android:layout_gravity="right"
+                android:text="@string/example"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="italic" />
         </LinearLayout>
-    
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/rate"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/s_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/example"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/numberOfQuestions"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/s_numberOfQuestions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/example"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/successes"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/s_successes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/example"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/errors"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/s_erros"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/example"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/empty"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/s_empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="@string/example"
+                android:textSize="@dimen/texto_estadistica"
+                android:textStyle="italic" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/profile_plays"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/report"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#444444"
+            android:textStyle="bold|italic" />
+
+        <ListView
+            android:id="@+id/lista_resultados"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
+    </LinearLayout>
 
 </FrameLayout>
