--- a/res/layout/splash_view.xml
+++ b/res/layout/splash_view.xml
@@ -25,7 +25,7 @@
             android:textSize="20sp"
             android:text="@string/refactory"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/turquesa_color" />
+            android:textColor="#444444" />
 
         <ImageView
             android:id="@+id/profile_picture"
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/green_color"
+            android:textColor="#444444"
             android:text="@string/AppName"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
