--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -9,7 +9,7 @@
 	<color name="blue_hight">#1D62F0</color>
 	<color name="purple">#5856D6</color>
 	
-	<color name="black">##2B2B2B</color>
+	<color name="black">#2B2B2B</color>
     <color name="rank1">#99FFCC00</color>
     <color name="rank2">#994CD964</color>
     <color name="rank3">#99007AFF</color>
